@@ -581,7 +581,10 @@ enum dwarf_type
     DW_ATE_HP_complex_float128   = 0x83, /* Complex floating-point (128 bit).  */
     DW_ATE_HP_floathpintel       = 0x84, /* Floating-point (82 bit IA64).  */
     DW_ATE_HP_imaginary_float80  = 0x85,
-    DW_ATE_HP_imaginary_float128 = 0x86
+    DW_ATE_HP_imaginary_float128 = 0x86,
+    /* GNU extensions.  */
+    DW_ATE_GNU_complex_signed    = 0x87, /* Complex signed int. */
+    DW_ATE_GNU_complex_unsigned  = 0x88, /* Complex unsigned int. */
   };
 
 #define	DW_ATE_lo_user 0x80
